--- a/src/simple-grid.scss
+++ b/src/simple-grid.scss
@@ -1,21 +1,6 @@
-// SIMPLE GRID - SASS/SCSS
-
-@use "sass:math";
-
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
-
-// fonts
-$font-family: 'Lato', Helvetica, sans-serif;
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-heavy: 700;
-$font-height: 1.5;
-
-// colors
-$dark-grey: #333447;
-$dark-gray: #333447; // for the Americans
-
-// universal
+@import "_utility.scss";
+@import "_typography.scss";
+@import "_grid.scss";
 
 html,
 body {
@@ -26,165 +11,4 @@ body {
   left: 0;
   top: 0;
   font-size: 100%;
-}
-
-* {
-  font-family: $font-family;
-  color: $dark-grey;
-  line-height: $font-height;
-}
-
-// typography
-
-h1 {
-  font-size: 2.5rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.375rem;
-}
-
-h4 {
-  font-size: 1.125rem;
-}
-
-h5 {
-  font-size: 1rem;
-}
-
-h6 {
-  font-size: 0.875rem;
-}
-
-p {
-  font-size: 1.125rem;
-  font-weight: 200;
-  line-height: 1.8;
-}
-
-.font-light {
-  font-weight: $font-weight-light;
-}
-
-.font-regular {
-  font-weight: $font-weight-regular;
-}
-
-.font-heavy {
-  font-weight: $font-weight-heavy;
-}
-
-// utility
-
-.left {
-  text-align: left;
-}
-
-.right {
-  text-align: right;
-}
-
-.center {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.justify {
-  text-align: justify;
-}
-
-.hidden-sm {
-  display: none;
-}
-
-// grid
-
-$width: 96%;
-$gutter: 4%;
-$breakpoint-small: 33.75em; // 540px
-$breakpoint-med: 45em; // 720px
-$breakpoint-large: 60em; // 960px
-
-.container {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-
-  @media only screen and (min-width: $breakpoint-small) {
-    width: 80%;
-  }
-
-  @media only screen and (min-width: $breakpoint-large) {
-    width: 75%;
-    max-width: 60rem;
-  }
-}
-
-.row {
-  position: relative;
-  width: 100%;
-}
-
-.row [class^="col"] {
-  float: left;
-  margin: 0.5rem 2%;
-  min-height: 0.125rem;
-}
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.col-1,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-10,
-.col-11,
-.col-12 {
-  width: $width;
-}
-
-.col-1-sm { width:math.div($width, 12) - math.div($gutter * 11, 12); }
-.col-2-sm { width: math.div($width, 6) - math.div($gutter * 10, 12); }
-.col-3-sm { width: ($width * 0.25) - math.div($gutter * 9, 12); }
-.col-4-sm { width: math.div($width, 3) - math.div($gutter * 8, 12); }
-.col-5-sm { width: math.div($width, (12 * 0.2)) - math.div($gutter * 7, 12); }
-.col-6-sm { width: ($width * 0.5) - math.div($gutter * 6, 12); }
-.col-7-sm { width: math.div($width, math.div(12, 7)) - math.div($gutter * 5, 12); }
-.col-8-sm { width: math.div($width, (12 * 0.125)) - math.div($gutter * 4, 12); }
-.col-9-sm { width: math.div($width, math.div(12, 9)) - math.div($gutter * 3, 12); }
-.col-10-sm { width: math.div($width, (12 * 0.1)) - math.div($gutter * 2, 12); }
-.col-11-sm { width: math.div($width, math.div(12, 11)) - math.div($gutter * 1, 12); }
-.col-12-sm { width: $width; }
-
-@media only screen and (min-width: $breakpoint-med) {
-  .col-1 { width:math.div($width, 12) - math.div($gutter * 11, 12); }
-  .col-2 { width: math.div($width, 6) - math.div($gutter * 10, 12); }
-  .col-3 { width: ($width * 0.25) - math.div($gutter * 9, 12); }
-  .col-4 { width: math.div($width, 3) - math.div($gutter * 8, 12); }
-  .col-5 { width: math.div($width, (12 * 0.2)) - math.div($gutter * 7, 12); }
-  .col-6 { width: ($width * 0.5) - math.div($gutter * 6, 12); }
-  .col-7 { width: math.div($width, math.div(12, 7)) - math.div($gutter * 5, 12); }
-  .col-8 { width: math.div($width, (12 * 0.125)) - math.div($gutter * 4, 12); }
-  .col-9 { width: math.div($width, math.div(12, 9)) - math.div($gutter * 3, 12); }
-  .col-10 { width: math.div($width, (12 * 0.1)) - math.div($gutter * 2, 12); }
-  .col-11 { width: math.div($width, math.div(12, 11)) - math.div($gutter * 1, 12); }
-  .col-12 { width: $width; }
-
-  .hidden-sm {
-    display: block;
-  }
 }
