Fixed & extended util. Made typography separate

--- a/src/_utility.scss
+++ b/src/_utility.scss
@@ -16,6 +16,14 @@
     text-align: justify;
 }
 
-.hidden-sm {
-    display: none;
+@media only screen and (min-width: $breakpoint-med) {
+    .hidden-sm {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: $breakpoint-large) {
+    .hidden-md {
+        display: none;
+    }
 }
