Fix the gutter variable not being used

--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -22,7 +22,7 @@
 
 .row [class^="col-"] {
   float: left;
-  margin: 0.5rem 2%;
+  margin: 0.5rem math.div($gutter, 2);
   min-height: 0.125rem;
 }
 
