--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,6 +4,7 @@ $gutter: 4%;
 $breakpoint-small: 33.75em; // 540px
 $breakpoint-med: 45em; // 720px
 $breakpoint-large: 60em; // 960px
+$columns: 12;
 
 /* Typography */
 $font-family: 'Lato', Helvetica, sans-serif;
