--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 
+/* Grid */
 .container {
   width: 90%;
   margin-left: auto;
@@ -32,6 +33,12 @@
   clear: both;
 }
 
+@for $i from 1 through $columns {
+  .col-#{$i} {
+    width: $width;
+  }
+}
+
 @media only screen and (min-width: $breakpoint-med) {
   @for $i from 1 through $columns {
 
@@ -39,13 +46,9 @@
     .col-#{$i}-md {
       width: calc($width / $columns * $i - $gutter);
     }
-  }
-}
 
-@media only screen and (min-width: $breakpoint-large) {
-  @for $i from 1 through $columns {
-    .col-#{$i}-lg {
-      width: calc($width / $columns * $i - $gutter);
+    .hidden-sm {
+      display: block;
     }
   }
 }
