--- a/sass/default.scss
+++ b/sass/default.scss
@@ -1,3 +1,13 @@
+/*
+  Simple Grid+
+  version: 
+  Licence: MIT
+  Website: https://simplegrid.hostbybelle.com/
+
+  Copyright (c) 2024 HostByBelle
+  Copyright (c) 2016 Zach Cole
+*/
+
 html,
 body {
   height: 100%;
