--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,8 @@
 /* Grid / Utility */
-$width: 96%;
-$gutter: 1.5%;
 $breakpoint-small: 33.75em; // 540px
 $breakpoint-med: 45em; // 720px
 $breakpoint-large: 60em; // 960px
+$breakpoint-xlarge: 75em; // 1200px
 $columns: 12;
 
 /* Typography */
